fixing bug -> "jumping screen"

--- a/src/features/changeDate/dayPicker.css
+++ b/src/features/changeDate/dayPicker.css
@@ -13,9 +13,9 @@
   font-size: 20px;
 }
 .iconAndDateContainer {
-  /* border: 2px solid red;  */
+  /* border: 2px solid red;   */
   display: flex;
   align-items: center;
   width: 30%;
-  margin-bottom: 5%;
+  margin-bottom: 60px;
 }
